# LogFile-Analyzer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
RU/: CONTRIBUTING_ru.md  README_ru.md  TODO.md
data/: log.txt
include/: log_entry.h  search.h  utils.h
src/: log_entry.c  main.c  search.c  utils.c
